snapshot_tests/operations/errors/fragmentTemplateTagWrongType.res
%graphql(`
  fragment ListFragment on Lists {
    nullableOfNullable
    nullableOfNonNullable
  }
`)

%graphql(`
  query MyQuery @ppxConfig(templateTagLocation: "gql", templateTagReturnType: "bool") {
    lists {
      ...ListFragment
    }
  }
`)
